--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soundify - Relaxing Audio Experience</title>
+    <title>Soundify - Soothing Audio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <div class="app-container">
-        <!-- Sidebar -->
+        <!-- Sidebar: Only exists in Laptop layout logic -->
         <aside class="sidebar">
             <div class="flex items-center gap-3 px-4 mb-6">
                 <div class="w-12 h-12 bg-indigo-500 rounded-2xl flex items-center justify-center shadow-lg shadow-indigo-500/30">
@@ -19,45 +19,39 @@
                 </div>
                 <h2 class="text-2xl font-bold text-white tracking-tight">Soundify</h2>
             </div>
-            
             <nav class="space-y-1">
                 <div class="flex items-center gap-4 text-indigo-400 bg-indigo-500/10 p-4 rounded-xl cursor-pointer">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
-                    <span class="font-semibold">Your Library</span>
+                    <span class="font-semibold text-white">Your Music</span>
                 </div>
             </nav>
         </aside>
 
-        <!-- Main Content -->
-        <main class="main-view animate-relax" id="main-view">
-            <header class="flex flex-col md:flex-row items-center md:items-end gap-6 md:gap-10 mb-12 text-center md:text-left pt-6 md:pt-0">
-                <div class="w-48 h-48 md:w-64 md:h-64 glass-card p-1 shadow-2xl">
-                    <div id="header-art-box" class="w-full h-full rounded-[24px] overflow-hidden bg-gradient-to-br from-indigo-500 to-purple-600 flex items-center justify-center">
-                        <svg class="w-24 h-24 text-white/30" fill="currentColor" viewBox="0 0 24 24"><path d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"/></svg>
+        <!-- Main View: Adjusts padding and header style automatically -->
+        <main class="main-view animate-relax">
+            <header class="flex flex-col md:flex-row items-center md:items-end gap-6 md:gap-10 mb-8 md:mb-12 text-center md:text-left">
+                <div class="w-44 h-44 md:w-64 md:h-64 glass-card p-1 shadow-2xl rounded-[24px]">
+                    <div class="w-full h-full rounded-[20px] overflow-hidden bg-gradient-to-br from-indigo-500 to-purple-600 flex items-center justify-center">
+                        <svg class="w-16 h-16 md:w-24 md:h-24 text-white/30" fill="currentColor" viewBox="0 0 24 24"><path d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"/></svg>
                     </div>
                 </div>
                 <div class="flex flex-col">
-                    <p class="text-indigo-400 font-bold text-xs md:text-sm uppercase tracking-widest mb-2">Local Storage</p>
-                    <h1 class="text-5xl md:text-7xl font-extrabold tracking-tight mb-4" id="playlist-title">All Audio</h1>
-                    <div class="text-slate-400 text-sm font-medium flex items-center justify-center md:justify-start gap-3">
-                        <span class="bg-indigo-500/10 text-indigo-400 px-3 py-1 rounded-full text-xs font-bold" id="song-count-badge">0 tracks</span>
-                        <span>•</span>
-                        <span class="opacity-70">Custom Files</span>
+                    <p class="text-indigo-400 font-bold text-[10px] md:text-sm uppercase tracking-widest mb-1 md:mb-2">Local Storage</p>
+                    <h1 class="text-4xl md:text-7xl font-extrabold tracking-tight mb-2 md:mb-4">All Tracks</h1>
+                    <div class="text-slate-400 text-xs md:text-sm font-medium flex items-center justify-center md:justify-start gap-3">
+                        <span class="bg-indigo-500/10 text-indigo-400 px-3 py-0.5 md:py-1 rounded-full text-[10px] font-bold" id="song-count-badge">0 tracks</span>
+                        <span class="hidden md:inline">•</span>
+                        <span class="opacity-70">Personal Vibe Engine</span>
                     </div>
                 </div>
             </header>
 
-            <div class="flex items-center gap-6 mb-10 justify-center md:justify-start">
-                <button class="play-btn-circle scale-110 md:scale-100" id="main-play-btn">
-                    <svg id="main-play-icon" class="w-7 h-7 ml-1" fill="currentColor" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
-                </button>
-            </div>
-
-            <div class="hidden md:grid song-row border-b border-white/5 mb-4 sticky top-0 bg-slate-900/80 backdrop-filter blur-md py-4 z-10 font-bold text-[10px] uppercase tracking-[0.2em] text-slate-500">
+            <!-- Table Header: Laptop Only -->
+            <div class="hidden md:grid song-row border-b border-white/5 mb-4 sticky top-0 bg-[#0f172a]/80 backdrop-filter blur-md py-4 z-10 font-bold text-[10px] uppercase tracking-[0.2em] text-slate-500">
                 <span>#</span>
-                <span>Track</span>
-                <span>Album</span>
-                <span class="flex justify-end pr-4">Duration</span>
+                <span>Track Name</span>
+                <span>Vibe / Album</span>
+                 <span class="flex justify-end pr-4">Duration</span>
             </div>
 
             <div id="song-list-container" class="pb-32">
@@ -73,61 +67,68 @@
                 <div class="song-row" data-id="9" data-title="Woah" data-artist="Arjan Dhillon" data-album="Arjan Dhillon" data-duration="2:54" data-cover="soundify.png" data-src="Woah-320kbps.mp3"></div>
                 <div class="song-row" data-id="10" data-title="Winning Speech" data-artist="Karan Aujla" data-album="Karan Aujla" data-duration="3:47" data-cover="soundify.png" data-src="Winning Speech-320kbps.mp3"></div>
             </div>
-        </main>
+        </main
 
-        <!-- Player Bar -->
+        <!-- Player Bar: Content stacks on phone, spreads on laptop -->
         <footer class="player-bar">
-            <!-- Now Playing -->
-            <div class="flex items-center gap-4 w-full md:w-1/4">
-                <img id="player-album-art" src="https://via.placeholder.com/64?text=Art" class="w-12 h-12 md:w-16 md:h-16 rounded-2xl shadow-xl object-cover" alt="Art">
-                <div class="flex flex-col overflow-hidden leading-tight">
-                    <span id="player-song-title" class="text-sm font-bold truncate text-white">Select a track</span>
-                    <span id="player-artist-name" class="text-xs text-slate-400 truncate">Soundify Relax</span>
+            <!-- Progress Bar: Absolute top on Phone, Inline on Laptop -->
+            <div id="prog-wrap-mob" class="md:hidden w-full absolute top-0 left-0">
+                <div id="progress-container-mob" class="progress-bar-container h-1 bg-white/5">
+                    <div id="progress-fill-mob" class="progress-bar-fill h-1"></div>
                 </div>
             </div>
 
-            <!-- Controls -->
+            <!-- Track Info: Stays left in both layouts -->
+            <div class="flex items-center gap-4 w-full md:w-1/4">
+                <img id="player-album-art" src="https://via.placeholder.com/64?text=Art" class="w-14 h-14 md:w-16 md:h-16 rounded-2xl shadow-xl object-cover" alt="Art">
+                <div class="flex flex-col overflow-hidden leading-tight">
+                    <span id="player-song-title" class="text-sm md:text-base font-bold truncate text-white">Select a track</span>
+                    <span id="player-artist-name" class="text-[10px] md:text-xs text-slate-400 truncate">Listen now</span>
+                </div>
+            </div>
+
+            <!-- Main Controls: Center-aligned -->
             <div class="flex flex-col items-center gap-2 w-full md:w-2/4">
                 <div class="flex items-center gap-6 md:gap-10">
-                    <button id="btn-shuffle" class="control-btn opacity-60 hover:opacity-100 transition-opacity" title="Shuffle">
+                    <button id="btn-shuffle" class="control-btn hidden md:block" title="Shuffle">
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"></path></svg>
                     </button>
                     <button id="btn-prev" class="control-btn">
-                        <svg class="w-7 h-7 md:w-9 md:h-9" fill="currentColor" viewBox="0 0 24 24"><path d="M6 6h2v12H6zm3.5 6L18 18V6z"/></svg>
+                        <svg class="w-8 h-8 md:w-9 md:h-9" fill="currentColor" viewBox="0 0 24 24"><path d="M6 6h2v12H6zm3.5 6L18 18V6z"/></svg>
                     </button>
-                    <button id="btn-play-pause" class="w-12 h-12 md:w-14 md:h-14 rounded-full bg-white text-slate-900 flex items-center justify-center shadow-2xl transition-all hover:scale-105 active:scale-95">
+                    <button id="btn-play-pause" class="w-12 h-12 md:w-14 md:h-14 rounded-full bg-white text-slate-900 flex items-center justify-center shadow-2xl transition-all hover:scale-110 active:scale-95">
                         <svg id="play-pause-icon" class="w-7 h-7 ml-0.5" fill="currentColor" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
                     </button>
                     <button id="btn-next" class="control-btn">
-                        <svg class="w-7 h-7 md:w-9 md:h-9" fill="currentColor" viewBox="0 0 24 24"><path d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"/></svg>
+                        <svg class="w-8 h-8 md:w-9 md:h-9" fill="currentColor" viewBox="0 0 24 24"><path d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"/></svg>
                     </button>
-                    <button id="btn-repeat" class="control-btn opacity-60 hover:opacity-100 transition-opacity" title="Repeat">
+                    <button id="btn-repeat" class="control-btn hidden md:block" title="Repeat">
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path></svg>
                     </button>
                 </div>
                 
-                <div class="flex items-center gap-3 w-full max-w-lg px-2">
+                <!-- Desktop Only Progress Bar + Timers -->
+                <div class="hidden md:flex items-center gap-3 w-full max-w-lg">
                     <span id="current-time" class="text-[10px] font-bold text-slate-500 w-8 text-right">0:00</span>
-                    <div id="progress-container" class="progress-bar-container">
-                        <div id="progress-fill" class="progress-bar-fill"></div>
+                    <div id="progress-container-desk" class="progress-bar-container">
+                        <div id="progress-fill-desk" class="progress-bar-fill"></div>
                     </div>
-                    <span id="duration" class="text-[10px] font-bold text-slate-500 w-8">0:00</span>
+                    <span id="duration-el" class="text-[10px] font-bold text-slate-500 w-8">0:00</span>
                 </div>
             </div>
 
-            <!-- Volume -->
+            <!-- Volume Control: Stays right in Laptop Layout -->
             <div class="hidden md:flex items-center justify-end gap-3 w-1/4">
                 <svg class="w-4 h-4 text-slate-500" fill="currentColor" viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/></svg>
-                <div id="volume-container" class="progress-bar-container w-24 bg-slate-700/50">
+                <div id="volume-container" class="progress-bar-container w-20 bg-slate-700/50">
                     <div id="volume-fill" class="progress-bar-fill w-3/4"></div>
                 </div>
             </div>
         </footer>
     </div>
 
+    <!-- Hidden Audio Engine -->
     <audio id="audio-engine" preload="auto"></audio>
-
     <script src="script.js"></script>
 </body>
-
 </html>
