Fix HTML formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
 
             <!-- Track Info: Stays left in both layouts -->
-            <div class="flex items-center gap-4 w-full md:w-1/4">
+                <div class="flex items-center gap-3 w-full md:w-1/4 mb-2 md:mb-0">
                 <img id="player-album-art" src="https://via.placeholder.com/64?text=Art" class="w-14 h-14 md:w-16 md:h-16 rounded-2xl shadow-xl object-cover" alt="Art">
                 <div class="flex flex-col overflow-hidden leading-tight">
                     <span id="player-song-title" class="text-sm md:text-base font-bold truncate text-white">Select a track</span>
@@ -96,7 +96,7 @@
                     <button id="btn-prev" class="control-btn">
                         <svg class="w-8 h-8 md:w-9 md:h-9" fill="currentColor" viewBox="0 0 24 24"><path d="M6 6h2v12H6zm3.5 6L18 18V6z"/></svg>
                     </button>
-                    <button id="btn-play-pause" class="w-12 h-12 md:w-14 md:h-14 rounded-full bg-white text-slate-900 flex items-center justify-center shadow-2xl transition-all hover:scale-110 active:scale-95">
+                    <button id="btn-play-pause" class="w-11 h-11 md:w-14 md:h-14 rounded-full bg-white text-slate-900 flex items-center justify-center shadow-2xl transition-all hover:scale-110 active:scale-95">
                         <svg id="play-pause-icon" class="w-7 h-7 ml-0.5" fill="currentColor" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
                     </button>
                     <button id="btn-next" class="control-btn">
@@ -132,3 +132,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
